--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "cogo-toast": "^4.2.3",
     "formik": "^2.1.5",
     "next": "9.3.5",
     "node-fetch": "^2.6.0",
@@ -18,6 +19,8 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.13.1",
     "react-responsive": "^8.1.0",
+    "store": "^2.0.12",
+    "sweetalert2": "^9.17.1",
     "swr": "^0.3.1"
   }
 }
