--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cogo-toast": "^4.2.3",
     "formik": "^2.1.5",
     "google-maps-react": "^2.0.6",
+    "jquery": "^3.5.1",
     "next": "9.3.5",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
