--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "cogo-toast": "^4.2.3",
+    "datatables.net": "^1.10.22",
     "formik": "^2.1.5",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "next": "9.3.5",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
+    "qs": "^6.9.4",
     "react": "16.13.1",
+    "react-awesome-spinners": "^1.3.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "16.13.1",
     "react-geolocated": "^3.0.1",
     "react-responsive": "^8.1.0",
     "store": "^2.0.12",
+    "styled-components": "^5.2.0",
     "sweetalert2": "^9.17.1",
     "swr": "^0.3.1"
   }
