--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "store": "^2.0.12",
     "styled-components": "^5.2.0",
     "sweetalert2": "^9.17.1",
-    "swr": "^0.3.1"
+    "swr": "^0.3.1",
+    "yup": "^0.29.3"
   }
 }
