--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "cogo-toast": "^4.2.3",
     "datatables.net": "^1.10.22",
+    "firebase": "^8.0.2",
     "formik": "^2.1.5",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
